app/infra/manifests/db-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: db
  namespace: seccamp-app
spec:
  replicas: 1
  selector:
    matchLabels:
      app: db
  template:
    metadata:
      labels:
        app: db
    spec:
      containers:
      - name: mariadb
        image: mariadb:11.3
        ports:
        - containerPort: 3306
        volumeMounts:
        - name: db-init
          mountPath: /docker-entrypoint-initdb.d
      volumes:
      - name: db-init
        configMap:
          name: db-init-sql
