app/infra/manifests/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: app-frontend-ingress
  namespace: seccamp-app
  annotations:
    cert-manager.io/cluster-issuer: root-ca-issuer
    ingress.kubernetes.io/ssl-redirect: "true"
spec:
  ingressClassName: nginx
  rules:
  - host: app.seccamp.com
    http:
      paths:
      - backend:
          service:
            name: frontend
            port:
              number: 80
        path: /
        pathType: Prefix
  tls:
  - hosts:
    - app.seccamp.com
    secretName: app-seccamp-com-tls
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: app-backend-ingress
  namespace: seccamp-app
  annotations:
    cert-manager.io/cluster-issuer: root-ca-issuer
    ingress.kubernetes.io/ssl-redirect: "true"
    nginx.ingress.kubernetes.io/rewrite-target: /$1
spec:
  ingressClassName: nginx
  rules:
  - host: app.seccamp.com
    http:
      paths:
      - backend:
          service:
            name: backend
            port:
              number: 8000
        path: /api/(.*)
        pathType: Prefix
  tls:
  - hosts:
    - app.seccamp.com
    secretName: app-seccamp-com-tls
